
  [ Andreas Beckmann ]
  * Add support for arm64 driver releases.
  * Update nv-readme.ids.
  * Refresh patches.
  * Update symbols files.
  * Remove libnvidia-fatbinaryloader package.
  * libnvidia-ngx1: New package for the NVIDIA NGX runtime library.
  * libcuda1: Add Provides: libcuda-11.0-1{,-i386}.
  * Replace *-i386 helper packages with *:i386 recomendations.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 30 Jun 2020 10:28:49 +0200

nvidia-graphics-drivers (440.100-1) unstable; urgency=medium

  * New upstream long lived branch release 440.100 (2020-06-24).
    * Fixed CVE-2020-5963, CVE-2020-5967.  (Closes: #963766)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5031
    - Added a workaround for some Pascal based notebooks, where the GPU
      could fall off the bus when idle.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 30 Jun 2020 09:52:45 +0200

nvidia-graphics-drivers (440.95.01-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 440.95.01 (2020-06-24).
    * Fixed CVE-2020-5963, CVE-2020-5967.  (Closes: #963766)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5031
    - Added support for the following GPUs: GeForce GTX 1650 Ti,
      GeForce GTX 1650 Ti with Max-Q Design,
      GeForce RTX 2060 with Max-Q Design, Quadro T1000 with Max-Q Design.
    - Added new "Connector-N" display device aliases to the X driver's
      X configuration option parser.  This is useful in conjunction with
      the "ConnectedMonitor" X configuration option, for emulating the
      presence of connected monitors without knowing what specific
      connectors are available.  See the "Display Device Names" appendix
      in the README for details.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * Refresh patches.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 29 Jun 2020 21:42:12 +0200

nvidia-graphics-drivers (440.82-2) unstable; urgency=medium
