@@ -642,15 +642,15 @@ Description: NVIDIA binary EGL core libraries${nvidia:VariantDesc}
  implementation of EGL and OpenGL|ES.
 
 Package: nvidia-egl-common
-Architecture: i386 amd64 ppc64el armhf
+Architecture: i386 amd64 arm64 ppc64el armhf
 Multi-Arch: foreign
 Depends:
  ${misc:Depends}
 Suggests:
- libegl-${nvidia-}0 [i386 amd64 ${arch:ppc64el}]
- | libegl-nvidia-tesla-440-0 [!i386 !armhf]
- | libegl-nvidia-tesla-418-0 [!i386 !armhf]
- | libegl-nvidia-legacy-390xx0 [!ppc64el],
+ libegl-${nvidia-}0 [i386 amd64 ${arch:arm64} ${arch:ppc64el}]
+ | libegl-nvidia-tesla-440-0 [!i386 !armhf !arm64]
+ | libegl-nvidia-tesla-418-0 [!i386 !armhf !arm64]
+ | libegl-nvidia-legacy-390xx0 [!arm64 !ppc64el],
 Description: NVIDIA binary EGL driver - common files
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
@@ -711,15 +711,15 @@ Description: Video Decode and Presentation API for Unix - NVIDIA driver${nvidia:
  ${nvidia:kmod:Description}
 
 Package: nvidia-vulkan-common
-Architecture: i386 amd64 ppc64el
+Architecture: i386 amd64 arm64 ppc64el
 Multi-Arch: foreign
 Depends:
  ${misc:Depends}
 Suggests:
- ${nvidia}-vulkan-icd [i386 amd64 ${arch:ppc64el}]
- | nvidia-tesla-440-vulkan-icd [!i386]
- | nvidia-tesla-418-vulkan-icd [!i386]
- | nvidia-legacy-390xx-vulkan-icd [!ppc64el],
+ ${nvidia}-vulkan-icd [i386 amd64 ${arch:arm64} ${arch:ppc64el}]
+ | nvidia-tesla-440-vulkan-icd [!i386 !arm64]
+ | nvidia-tesla-418-vulkan-icd [!i386 !arm64]
+ | nvidia-legacy-390xx-vulkan-icd [!arm64 !ppc64el],
 Conflicts:
  libgl1-${nvidia}-glx,
  libgl1-nvidia-tesla-418-glx,
@@ -1117,15 +1117,15 @@ Description: NVIDIA NGX runtime library${nvidia:VariantDescShort}
  This package contains the NVIDIA NGX runtime library.
 
 Package: nvidia-opencl-common
-Architecture: i386 amd64 ppc64el
+Architecture: i386 amd64 arm64 ppc64el
 Multi-Arch: foreign
 Depends:
  ${misc:Depends}
 Suggests:
- ${nvidia}-opencl-icd [i386 amd64 ${arch:ppc64el}]
- | nvidia-tesla-440-opencl-icd [!i386]
- | nvidia-tesla-418-opencl-icd [!i386]
- | nvidia-legacy-390xx-opencl-icd [!ppc64el],
+ ${nvidia}-opencl-icd [i386 amd64 ${arch:arm64} ${arch:ppc64el}]
+ | nvidia-tesla-440-opencl-icd [!i386 !arm64]
+ | nvidia-tesla-418-opencl-icd [!i386 !arm64]
+ | nvidia-legacy-390xx-opencl-icd [!arm64 !ppc64el],
 Description: NVIDIA OpenCL driver - common files
  OpenCL (Open Computing Language) is a multivendor open standard for
  general-purpose parallel programming of heterogeneous systems that include
